@@ -1,2 +1,3 @@
 Mike Blumenkrantz (zmike/discomfitor) <michael.blumenkrantz@gmail.com>
 Cedric Bail <cedric@efl.so>
+Mikael Sans <sans.mikael@gmail.com>
