@@ -275,7 +275,12 @@ _get_syspath_from_watch(void             *data,
         if ((!(test = udev_device_get_subsystem(device)))
             || (strcmp(test, "video4linux")))
           goto error;
+        break;
 
+      case EEZE_UDEV_TYPE_BLUETOOTH:
+        if ((!(test = udev_device_get_subsystem(device)))
+            || (strcmp(test, "bluetooth")))
+          goto error;
         break;
 
       default:
@@ -359,6 +364,12 @@ eeze_udev_watch_add(Eeze_Udev_Type     type,
         udev_monitor_filter_add_match_subsystem_devtype(mon, "video4linux",
                                                         NULL);
         break;
+
+      case EEZE_UDEV_TYPE_BLUETOOTH:
+        udev_monitor_filter_add_match_subsystem_devtype(mon, "bluetooth",
+                                                        NULL);
+        break;
+
       default:
         break;
      }
