@@ -1,5 +1,12 @@
 Eeze 1.1.0
 
+Changes since Eeze 1.1.0:
+-------------------------
+
+Additions :
+
+    * Detect bluetooth devices.
+
 Changes since Eeze 1.0.0:
 -------------------------
 
